removed overflow:hidden in body to fix displaying issue in safari on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,7 +6,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   @include hide-scrollbar;
-  overflow: hidden;
   @include tablet-landscape {
     user-select: none;
   }
